@@ -6,8 +6,8 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
-import static java.util.stream.Collectors.toSet;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
@@ -27,55 +27,55 @@ public class InviteUserViewModelTest {
     @Test
     public void inviteExternalUserViewModelKta() {
 
-        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(Arrays.asList(Role.KNOWLEDGE_TRANSFER_ADVISER)));
+        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(List.of(Role.KNOWLEDGE_TRANSFER_ADVISER)));
 
         assertEquals(InviteUserView.EXTERNAL_USER, viewModel.getType());
         assertEquals("knowledge transfer adviser", viewModel.getTypeName());
         assertTrue(viewModel.isExternal());
-        assertEquals(viewModel.getRoles(), new HashSet<>(Arrays.asList(Role.KNOWLEDGE_TRANSFER_ADVISER)));
+        assertEquals(viewModel.getRoles(), new HashSet<>(List.of(Role.KNOWLEDGE_TRANSFER_ADVISER)));
     }
 
     @Test
     public void inviteExternalUserViewModelSupporter() {
 
-        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<Role>(Arrays.asList(Role.SUPPORTER)));
+        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<Role>(List.of(Role.SUPPORTER)));
 
         assertEquals(InviteUserView.EXTERNAL_USER, viewModel.getType());
         assertEquals("supporter", viewModel.getTypeName());
         assertTrue(viewModel.isExternal());
-        assertEquals(viewModel.getRoles(), new HashSet<>(Arrays.asList(Role.SUPPORTER)));
+        assertEquals(viewModel.getRoles(), new HashSet<>(List.of(Role.SUPPORTER)));
     }
 
     @Test
     public void inviteExternalUserViewModelAllExternalRoles() {
 
-        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, Role.externalRolesToInvite().stream().collect(toSet()));
+        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(Role.externalRolesToInvite()));
 
         assertEquals(InviteUserView.EXTERNAL_USER, viewModel.getType());
         assertTrue(Arrays.asList("assessor", "knowledge transfer adviser", "supporter").contains(viewModel.getTypeName()));
         assertTrue(viewModel.isExternal());
-        assertEquals(viewModel.getRoles(), Role.externalRolesToInvite().stream().collect(toSet()));
+        assertEquals(viewModel.getRoles(), new HashSet<>(Role.externalRolesToInvite()));
     }
 
     @Test
     public void inviteExternalUserViewModelAssessor() {
 
-        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(Arrays.asList(Role.ASSESSOR)));
+        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(List.of(Role.ASSESSOR)));
 
         assertEquals(InviteUserView.EXTERNAL_USER, viewModel.getType());
         assertTrue(Arrays.asList("assessor", "knowledge transfer adviser", "supporter").contains(viewModel.getTypeName()));
         assertTrue(viewModel.isExternal());
-        assertEquals(viewModel.getRoles(), new HashSet<>(Arrays.asList(Role.ASSESSOR)));
+        assertEquals(viewModel.getRoles(), new HashSet<>(List.of(Role.ASSESSOR)));
     }
 
     @Test
     public void inviteExternalUserViewModelExcludingAssessor() {
 
-        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, Role.externalRolesExcludingAssessor().stream().collect(toSet()));
+        InviteUserViewModel viewModel = new InviteUserViewModel(InviteUserView.EXTERNAL_USER, new HashSet<>(Role.externalRolesExcludingAssessor()));
         assertEquals(InviteUserView.EXTERNAL_USER, viewModel.getType());
         assertTrue(Arrays.asList("knowledge transfer adviser", "supporter").contains(viewModel.getTypeName()));
         assertTrue(viewModel.isExternal());
 
-        assertEquals(viewModel.getRoles(), Role.externalRolesExcludingAssessor().stream().collect(toSet()));
+        assertEquals(viewModel.getRoles(), new HashSet<>(Role.externalRolesExcludingAssessor()));
     }
 }
